force-app/main/default/objects/FNS_Activity__c/FNS_Activity__c.object-meta.xml
<CustomObject>
    <description>Activity List</description>
    <label>Activity</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Activity No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>