force-app/main/default/objects/FNS_Activity__c/fields/FNS_ActivityExternalId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ActivityExternalId__c</fullName>
    <description>Activity Identifier</description>
    <externalId>true</externalId>
    <label>Activity External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>