force-app/main/default/objects/FNS_Activity__c/fields/FNS_ActivityNotes__c.field-meta.xml
<CustomField>
    <fullName>FNS_ActivityNotes__c</fullName>
    <label>Activity Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>