force-app/main/default/objects/FNS_Activity__c/fields/FNS_ApplicationExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationExtId__c</fullName>
    <description>Application Id</description>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>