force-app/main/default/objects/FNS_Activity__c/fields/FNS_NextAvailableActivityIds__c.field-meta.xml
<CustomField>
    <fullName>FNS_NextAvailableActivityIds__c</fullName>
    <description>This field is to fetch all the available activities for this activity</description>
    <label>Next Available Activity Ids</label>
    <type>TextArea</type>
</CustomField>