force-app/main/default/objects/FNS_Activity__c/fields/FNS_NextDefaultActivityId__c.field-meta.xml
<CustomField>
    <fullName>FNS_NextDefaultActivityId__c</fullName>
    <description>This field is to identify what is the next activity for this activity</description>
    <label>Default Activity Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>