force-app/main/default/objects/FNS_Activity__c/fields/FNS_SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_SequenceNumber__c</fullName>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>