force-app/main/default/objects/FNS_Activity__c/recordTypes/FNS_TrackingItem.recordType-meta.xml
<RecordType>
    <fullName>FNS_TrackingItem</fullName>
    <active>true</active>
    <label>Tracking Items</label>
</RecordType>