force-app/main/default/objects/FNS_Activity__c/recordTypes/FNS_TrackingItemReadOnly.recordType-meta.xml
<RecordType>
    <fullName>FNS_TrackingItemReadOnly</fullName>
    <active>true</active>
    <label>Tracking Items Read Only</label>
</RecordType>