force-app/main/default/objects/FNS_Activity__c/listViews/FNS_Activities.listView-meta.xml
<ListView>
    <fullName>FNS_Activities</fullName>
    <columns>NAME</columns>
    <columns>FNS_Description__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Activities</label>
</ListView>